# abctokz

./: .gitignore  pyproject.toml  solution.md  solution.tex  task19.py
artifacts/task6/: english_only_corpus.txt
artifacts/task6/bpe/: manifest.json  merges.txt  vocab.json
artifacts/task6/unigram/: manifest.json  pieces.json
artifacts/task6/wordlevel/: manifest.json  vocab.json
docs/: architecture.md  cli.md  evaluation.md  indic_support.md  training.md
outputs/: task8.txt
outputs/task6/: report.json
src/abctokz/: tokenizer.py
src/abctokz/cli/: benchmark.py  decode.py  encode.py  inspect.py  main.py  train.py
src/abctokz/decoders/: __init__.py  base.py  subword_decoder.py  word_decoder.py
src/abctokz/eval/: benchmark.py
src/abctokz/models/: __init__.py
src/abctokz/normalizers/: __init__.py  base.py  devanagari.py  identity.py  sequence.py  unicode_nfkc.py  whitespace.py
src/abctokz/pretokenizers/: base.py  devanagari_aware.py  punctuation.py  regex.py  sequence.py  whitespace.py
tasks/: task10.py  task11.py  task13.py  task15.py  task15after.py  task3.py  task5.py  task6.py  task7.py  task8.py  task9.py
tests/: conftest.py
tests/integration/: test_train_save_load.py
tests/property/: test_determinism.py
